--- a/assets/style2.css
+++ b/assets/style2.css
@@ -32,23 +32,31 @@ ul li.active a {
     background-color: white;
     color: black;
 }
-.container {  
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 5px;
-    padding: 10px;
+.container {
+    max-width: 1224px;
+    width: 90%;
+    margin: auto;
+    padding: 40px 0;   
 }
-.container .heading h3 {
-    border-bottom: 3px solid black;
+.h3 {
+    margin-bottom: 2rem;
 }
-/* Style the image boxes */
+.heading h3 {
+    font-size: 30px;
+    text-decoration: underline;
+}
+.heading {
+    display: flex;
+    gap: 20px;
+}
 .box {
-    border: 1px solid #ccc;
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
-
-.pics img {
-    margin-top: 50px;
+.pics img{
     width: 100%;
-    height: auto;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: cover;
 }
