--- a/style3.css
+++ b/style3.css
@@ -4,7 +4,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 header {
-    background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(jake2.jpg);
+    background-color: rgb(93, 89, 89);
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -98,16 +98,45 @@ button {
     width: 100%;
     cursor: pointer;
 }
-.container2 {
-    position: relative;
-    width: 100%;
-    padding-bottom: 55%;
-    pointer-events: none;
+.header {
+    background-color: rgb(83, 81, 81);
+    padding: 10px;
 }
-.container2 iframe {
-    position: absolute;
-    height: 80%;
+img {
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+    display: inline-block;
+}
+.grid-wrapper > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.grid-wrapper > div > img {
     width: 100%;
-    top: 10%;
-    left: 0;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.grid-wrapper {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-rows: 200px;
+    grid-auto-flow: dense;
+}
+.grid-wrapper .wide {
+    grid-column: span 2;
+}
+.grid-wrapper .tall {
+    grid-row: span 2
+}
+.grid-wrapper .big {
+    grid-column: span 2;
+    grid-row: span 2;
+}
+.grid-wrapper > div img {
+    width: 300px;
+    height: 200px;
 }
