--- a/assets/style2.css
+++ b/assets/style2.css
@@ -36,7 +36,7 @@ ul li.active a {
     max-width: 1224px;
     width: 90%;
     margin: auto;
-    padding: 40px 0;   
+    padding: 40px 0;  
 }
 .h3 {
     margin-bottom: 2rem;
@@ -48,15 +48,29 @@ ul li.active a {
 .heading {
     display: flex;
     gap: 20px;
+    margin-top: 5vh;
 }
-.box {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-.pics img{
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
+img {
+    padding-top: 30%;
+    width: 400px;
+    height: 500px;
     object-fit: cover;
+    padding: 5px;
+}
+img:hover {
+    cursor: pointer;
+    opacity: 0.5;
+    transition: 0.5s;
+}
+.runners {
+    object-fit: cover;
+    object-position: bottom;
+}
+.pics {
+    display: flex;
+    max-width: 1200px;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
