--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+body {
+    background-color: rgb(205, 205, 187);
+}
 ul {
     list-style-type: none;
     float: right;
@@ -10,6 +13,7 @@ ul {
 }
 ul li {
     display: inline-block;
+    margin-left: 1200px;
 }
 ul li a {
     text-decoration: none;
@@ -132,6 +136,130 @@ img2 {
         justify-content: space-evenly;
         align-items: center;
 }
-body {
-    background-color: rgb(208, 208, 193);
+.container {
+    max-width: 1224px;
+    width: 90%;
+    margin: auto;
+    padding: 40px 0;  
+}
+.h3 {
+    margin-bottom: 2rem;
+}
+.heading h3 {
+    font-size: 30px;
+    text-decoration: underline;
+}
+.heading {
+    display: flex;
+    gap: 20px;
+    margin-top: 5vh;
+}
+img {
+    padding-top: 30%;
+    width: 400px;
+    height: 500px;
+    object-fit: cover;
+    padding: 5px;
+}
+img:hover {
+    cursor: pointer;
+    opacity: 0.5;
+    transition: 0.5s;
+}
+.runners {
+    object-fit: cover;
+    object-position: bottom;
+}
+.pics {
+    display: flex;
+    max-width: 1200px;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.header {
+    background-color: rgb(83, 81, 81);
+    padding: 10px;
+}
+/* .img2 {
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+    display: inline-block;
+}
+.grid-wrapper > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.grid-wrapper > div > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.grid-wrapper {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-rows: 200px;
+    grid-auto-flow: dense;
+}
+.grid-wrapper .wide {
+    grid-column: span 2;
+}
+.grid-wrapper .tall {
+    grid-row: span 2
+}
+.grid-wrapper .big {
+    grid-column: span 2;
+    grid-row: span 2;
+}
+.grid-wrapper > div img {
+    width: 300px;
+    height: 200px;
+} */
+img {
+    padding-top: 35%;
+    width: 250px;
+    height: 500px;
+    object-fit: cover;
+    padding: 5px;
+}
+img2:hover {
+    cursor: pointer;
+    opacity: 0.5;
+    transition: 0.5s;
+}
+
+.img2 {
+    display: flex;
+    max-width: 1200px;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto; 
+    padding: 10px; 
+    box-sizing: border-box;
+}
+.story {
+    display: flex;
+    gap: 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+.story h2 {
+    font-size: 30px;
+    text-decoration: underline;
+}
+.h2 {
+    display: flex;
+    gap: 20px;
+}
+p {
+    margin: 20px 40px 0 40px;
+    text-align: center;
+    text-transform: initial;
 }
